# ProgramacionParalela

./: .cloreignore  .gitignore  README.md  pyproject.toml
configs/: default.yaml
docs/: design.md  report.md
scripts/: analyze_results.py  make_viz.py  run_batching_experiment.py  run_benchmarks.py  run_comparison.py  run_evaluator_demo.py  run_grid_search.py  run_pso.py  run_pyswarms_baseline.py  runpso.py
src/pso/core/: bounds.py  pso.py  state.py  topology.py
src/pso/eval/: base.py  multiprocessing_eval.py  sequential.py  threading_eval.py
src/pso/experiments/: config.py  grid_search.py  runner.py
src/pso/io/: metadata.py  persistence.py
src/pso/objectives/: __init__.py  ackley.py  rastrigin.py  rosenbrock.py  sphere.py
src/pso/viz/: convergence.py  swarm_3d.py  swarm_animation.py
tests/: test_bounds.py  test_bounds_policy.py  test_evaluator_equivalence.py  test_grid_search.py  test_monotonic_gbest.py  test_objectives.py  test_persistence.py  test_pool_lifecycle.py  test_reproducibility.py  test_sphere_convergence.py  test_topology.py
